Fixes navbar being hidden behind other divs in aboutme page

--- a/css/nav.css
+++ b/css/nav.css
@@ -11,6 +11,7 @@ html, body {
 	flex-wrap: wrap;
 	background-color: var(--darkdarkgray);
 	overflow: hidden;
+    position: relative;
     z-index: 10;
 }
 
